@@ -1,5 +1,9 @@
 Thu Sep 18 21:13:40 1997  Jeffrey A Law  (law@cygnus.com)
 
+	* configure.in (strtoul, bsearch): Have autoconf check for these
+	functions.
+	* configure, config.in: Rebuilt.
+
 	* m68k/xm-mot3300.h (alloca): Properly declare if __STDC__.
 	* mips/mips.h (alloca): Likewise.
 	* rs6000/xm-rs6000.h (alloca): Likewise.
